# recursive-file-content-searcher

./: .gitignore  Cargo.toml  README.md  build-dist.bat  build-dist.sh  build.bat  build.sh  package-lock.json
electron-ui/: index.html  main.js  package-lock.json  package.json
src/: main.rs
