[package]
name = "filesystem-searcher"
version = "0.2.1"  # Make sure this matches CURRENT_VERSION in main.rs
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
regex = "1.11.1"
num_cpus = "1.16.0"
futures = "0.3.31"
crossbeam = "0.8.4"
indicatif = "0.17.9"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["json"] }
semver = "1.0"
