[package]
name = "filesystem-searcher"
version = "0.2.3"  # Make sure this matches CURRENT_VERSION in main.rs
edition = "2021"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
regex = "1.12.3"
num_cpus = "1.17.0"
futures = "0.3.32"
crossbeam = "0.8.4"
indicatif = "0.18.4"
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json"] }
semver = "1.0.27"
